mysite/k8s/deploys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
      - name: mysite
        image: ghcr.io/connie518/mysite:latest
        ports:
        - containerPort: 8000
