mysite/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite-service
spec:
  selector:
    app: mysite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
